tests/rosetta/out/Java/100-doors-2.error
javac: exit status 1
/tmp/M100Doors2.java:10: error: incompatible types: String cannot be converted to int
        int line = "Door " + String.valueOf(current) + " ";
                                                     ^
/tmp/M100Doors2.java:12: error: incompatible types: String cannot be converted to int
            line = (int)(line + "Open");
                        ^
/tmp/M100Doors2.java:17: error: incompatible types: String cannot be converted to int
            line = (int)(line + "Closed");
                        ^
3 errors
